--- a/template/notebook-xxxx/websiteStyle.css
+++ b/template/notebook-xxxx/websiteStyle.css
@@ -7,8 +7,8 @@
 	border-style:solid;
 	border-width:2px 0px;
 	border-color:powderblue;
-	padding:10px;
-	margin-bottom:10px;
+	padding:20px;
+	margin:20px 0;
 }
 
 .wavy {
