--- a/HistoryTimeline/style.css
+++ b/HistoryTimeline/style.css
@@ -44,7 +44,7 @@ body {
 }
 .timeline-article {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   position: relative;
   overflow: hidden;
   margin: 20px 0;
@@ -80,7 +80,14 @@ body {
   line-height: 24px;
   position: relative;
 }
-.timeline-article h2, h3, h4{
+
+.timeline-article h4{
+  margin: 4 0;
+  color: #797979;
+}
+
+.timeline-article h3{
+  margin: 0 0 8 0;
   color: #242424;
 }
 
