--- a/HistoryTimeline/style.css
+++ b/HistoryTimeline/style.css
@@ -1,23 +1,114 @@
 body {
-  background: #e6e6e6;
-  font-family: "Roboto", sans-serif;
+  background: rgb(240, 240, 240);
+  font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif;
   font-weight: 400;
   padding-top: 40px; 
 }
 
+/* switch */
+.switch {
+  position: fixed; 
+  top: 10px; 
+  right: 10px;
+  z-index: 1000; 
+  display: flex;
+  width: 40px;
+  height: 24px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 24px;
+  width: 24px;
+  left: -1px;
+  bottom: 0px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border: 2px solid #ccc;
+}
+
+input:checked + .slider {
+  background-color: #242424;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #555555;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(18px);
+  -ms-transform: translateX(18px);
+  transform: translateX(18px);
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border: 2px solid #242424;
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+  border-color: #ccc;
+  border-width: 2px;
+}
+
 
 /* dropdown selection */
-.filter-options {
+.filter-wrapper {
   position: fixed; /* Fixed position */
-  top: 10px; /* Distance from the top of the page */
-  right: 10px;
-  z-index: 1000;
+  top: 40px; /* Distance from the top of the page */
+  right: 10px; /* Distance from the right of the page */
+  width: 260px;
+  display: flex; /* Use Flexbox */
+  flex-direction: column;
+  gap: 10px; /* Space between filters */
+  z-index: 1000; /* Ensure it stays on top of other elements */
+  background-color: #fff; /* Background color */
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
+  padding: 10px; /* Some padding */
+  box-sizing: border-box; 
+}
+
+.filter-options {
+  padding: 10px; /* Some padding */
+  box-sizing: border-box; 
+  position: relative; 
 }
 
 .dropdown-button {
   cursor: pointer;
-  background-color: #f1f1f1;
-  max-width: 200px;
+  background: transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -28,10 +119,11 @@ body {
   display: none;
   position: absolute;
   top: 100%;
-  right: 0;
-  background-color: #f9f9f9;
+  right: 10px;
+  background-color: #fff;
+  border-radius: 4px;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 6px, rgba(0, 0, 0, 0.07) 0px 0px 0px 1px !important;
   z-index: 1;
 }
 
@@ -42,22 +134,93 @@ body {
   font-weight: normal;
 }
 
+.dropdown-menu .areaSelectionBtn{
+  margin: 0 10px 10px 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .confirm-btn {
-  background-color: #4CAF50; /* Green */
+  background-color: #242424; 
   border: none;
+  border-radius: 50%;
   color: white;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 5px;
 }
-
-
 /* dropdown selection */
+
+/* slider */
+.slider-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+#dateSliderContainer {
+  padding: 10px;
+}
+
+#dateSliderInfo {
+  margin-top: 22px;
+  font-size: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.slider {
+  width: 100%; /* Adjust as needed */
+}
+
+.noUi-target {
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+}
+
+.noUi-base {
+  transform: translateY(-50%);
+  height: 2px;
+}
+
+.noUi-connect {
+  background: #242424;
+}
+
+.noUi-connects {
+  top: 10px;
+  background: #dddddd;
+}
+
+.noUi-horizontal .noUi-handle {
+  width: 32px;
+  height: 32px;
+}
+
+.noUi-handle {
+  background-color: #ffffff; /* Change handle color */
+  border: 1px solid #dddddd; /* Change handle border */
+  border-radius: 50%;
+  box-shadow: 0 6px 16px rgba(0,0,0,0.12);
+}
+
+.noUi-handle:before {
+  background-color: #ffffff00;
+}
+
+.noUi-handle:after {
+  background-color: #ffffff00;
+}
+
+/* slider */
 
 
 
@@ -73,11 +236,13 @@ body {
 #conference-timeline .timeline-end {
   display: table;
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
-  font-weight: 900;
+  font-size: 16px;
+  font-weight: 600;
   text-transform: uppercase;
-  background: #00b0bd;
-  padding: 15px 23px;
+  background: #696969;
+  border: 1px #696969 solid;
+  border-radius: 10px;
+  padding: 15px 30px;
   color: #fff;
   max-width: 5%;
   width: 100%;
@@ -91,7 +256,7 @@ body {
   top: 0;
   left: 50%;
   margin-left: -2px;
-  background: #00b0bd;
+  background: #696969;
   z-index: -1;
 }
 #conference-timeline .conference-timeline-content {
@@ -111,20 +276,33 @@ body {
   width: 100%;
 }
 .timeline-article .timeline-author {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 8px;
+  align-items: center;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  color: #242424;
+  color: #717171;
   text-align: right;
 }
+
+.timeline-article .timeline-author a {
+  color: #717171;
+}
+
+.timeline-article .timeline-author i {
+  font-size: 20px;
+}
+
 .timeline-article .content-left,
 .timeline-article .content-right {
   position: relative;
   width: auto;
-  border: 1px solid #ddd;
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0,0,0,.03);
+  border-radius: 10px;
   padding: 10px 18px;
 }
 .timeline-article p {
@@ -140,10 +318,12 @@ body {
 .timeline-article h4{
   margin: 4 0;
   color: #797979;
+  font-size: 0.75rem;
 }
 
 .timeline-article h3{
   margin: 0 0 8 0;
+  font-size: 16px;
   color: #242424;
 }
 
@@ -168,6 +348,7 @@ body {
   font-size: 23px;
   font-family: "FontAwesome";
   color: #fff;
+  border-radius: 2px;
 }
 .timeline-article .content-left:before {
   content: "\f0da";
@@ -181,21 +362,22 @@ body {
   position: absolute;
   top: 0;
   left: 50%;
-  width: 62px;
+  width: 80px;
   height: 62px;
-  margin-left: -31px;
+  margin-left: -40px;
   color: #fff;
-  border-radius: 100%;
-  background: #00b0bd;
+  border-radius: 10px;
+  border: 1px solid #696969;
+  background: #696969;
 }
 .timeline-article .meta-date .date,
 .timeline-article .meta-date .month {
   display: block;
   text-align: center;
-  font-weight: 900;
+  font-weight: 600;
 }
 .timeline-article .meta-date .date {
-  font-size: 18px;
+  font-size: 1.2rem;
   line-height: 40px;
 }
 .timeline-article .meta-date .month {
@@ -257,5 +439,10 @@ body {
     display: none;
   }
   
+}
+
+.century {
+  color: rgba(255, 255, 255, 0);
+  font-size: 1px;
 }
 /*===== // Resonsive Vertical Timeline =====*/
