--- a/HistoryTimeline/style.css
+++ b/HistoryTimeline/style.css
@@ -282,6 +282,7 @@ input:checked + .slider:before {
   z-index: -1;
 }
 #conference-timeline .conference-timeline-content {
+  position: relative;
   padding-top: 40px;
   padding-bottom: 40px;
 }
@@ -290,7 +291,7 @@ input:checked + .slider:before {
   /* height: 100%; */
   position: relative;
   overflow: hidden;
-  margin: 20px 0;
+  margin: 0 0 20px 0;
 }
 .timeline-article .content-left-container,
 .timeline-article .content-right-container {
