--- a/HistoryTimeline/style.css
+++ b/HistoryTimeline/style.css
@@ -1,6 +1,22 @@
 :root {
-  --font-family: "Source Han Serif", "Noto Serif", "Noto Serif SC", 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto', 'Helvetica Neue', sans-serif;
   letter-spacing: 0.6;
+}
+
+body {
+      font-family:
+        "Source Han Serif",
+        "Noto Serif",
+        "Noto Serif SC",
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        "Open Sans",
+        "Helvetica Neue",
+        sans-serif;
 }
 
 .confirm-btn,
