--- a/HistoryTimeline/style.css
+++ b/HistoryTimeline/style.css
@@ -302,7 +302,7 @@ input:checked+.slider:before {
   position: relative;
   max-width: 920px;
   width: 100%;
-  margin: 0 auto;
+  margin: 0 24% 0 auto;
 }
 
 #conference-timeline .timeline-start,
@@ -404,7 +404,7 @@ input:checked+.slider:before {
   padding: 0;
   font-weight: 400;
   color: #242424;
-  font-size: 14px;
+  font-size: 0.85rem;
   line-height: 24px;
   position: relative;
   margin-bottom: 8px;
@@ -413,13 +413,24 @@ input:checked+.slider:before {
 .timeline-article h4 {
   margin: 4 0;
   color: #797979;
-  font-size: 0.75rem;
+  font-size: 0.65rem;
 }
 
 .timeline-article h3 {
-  margin: 0 0 8 0;
-  font-size: 16px;
+  margin: 2 0 8 0;
+  font-size: 1rem;
   color: #242424;
+}
+
+.period {
+  font-size: 0.9rem;
+  margin-bottom: 4px;
+}
+
+.timeAndArea {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
 }
 
 .timeline-article p span.article-number {
@@ -448,6 +459,10 @@ input:checked+.slider:before {
   box-shadow: 0 1px 3px rgba(0, 0, 0, .03);
   border-radius: 2px;
   padding: 10px 18px;
+}
+
+.timeline-article .content-left {
+  text-align: right;
 }
 
 .timeline-article .content-left:before,
@@ -674,7 +689,7 @@ input:checked+.slider:before {
 
 .date-display {
   margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 12px;
   color: #696969;
 }
 
