--- a/HistoryTimeline/style.css
+++ b/HistoryTimeline/style.css
@@ -305,6 +305,11 @@ input:checked+.slider:before {
   margin: 0 24% 0 auto;
 }
 
+/* When filters are hidden, center the timeline */
+#conference-timeline.timeline-centered {
+  margin: 0 auto;
+}
+
 #conference-timeline .timeline-start,
 #conference-timeline .timeline-end {
   display: table;
@@ -471,14 +476,14 @@ input:checked+.slider:before {
   content: " ";
   top: 20px;
   transform: translateY(-50%);
-  width: 66px;
+  width: 65px;
   height: 1px;
   background-color: #696969;
   border-radius: 1px;
 }
 
 .timeline-article .content-left:before {
-  right: -66px;
+  right: -65px;
 }
 
 .timeline-article .content-left:after {
