--- a/FashionTimeline/style.css
+++ b/FashionTimeline/style.css
@@ -145,7 +145,7 @@ input:checked+.slider:before {
   gap: 10px;
   z-index: 1000;
   background-color: #fff;
-  border-radius: 8px;
+  border-radius: 2px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
   padding: 10px;
   box-sizing: border-box;
@@ -191,10 +191,11 @@ input:checked+.slider:before {
 .dropdown-menu {
   display: none;
   position: absolute;
-  top: 100%;
-  right: 1px;
+  top: -178px;
+  right: 115%;
   background-color: #fff;
-  border-radius: 4px;
+  border-radius: 2px;
+  border: 1px solid #696969c6;
   min-width: 260px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 6px, rgba(0, 0, 0, 0.07) 0px 0px 0px 1px !important;
   z-index: 1;
@@ -206,6 +207,11 @@ input:checked+.slider:before {
   padding: 10px;
   clear: both;
   font-weight: normal;
+}
+
+.area-list {
+  max-height: 400px;
+  overflow-y: auto;
 }
 
 .dropdown-menu .areaSelectionBtn {
@@ -482,7 +488,7 @@ input:checked+.slider:before {
   top: 20px;
   transform: translateY(-50%);
   /* width: 65px; */
-  width: calc((var(--conference-timeline-width) - var(--content-container-max-width) * 2 ) /2);
+  width: calc((var(--conference-timeline-width) - var(--content-container-max-width) * 2) /2);
   height: 1px;
   background-color: #696969;
   border-radius: 1px;
@@ -490,7 +496,7 @@ input:checked+.slider:before {
 
 .timeline-article .content-left:before {
   /* right: -65px; */
-  right: calc((var(--conference-timeline-width) - var(--content-container-max-width) * 2 ) / -2);
+  right: calc((var(--conference-timeline-width) - var(--content-container-max-width) * 2) / -2);
 }
 
 .timeline-article .content-left:after {
@@ -499,7 +505,7 @@ input:checked+.slider:before {
 
 .timeline-article .content-right:before {
   /* left: -66px; */
-  left: calc((var(--conference-timeline-width) - var(--content-container-max-width) * 2 ) / -2);
+  left: calc((var(--conference-timeline-width) - var(--content-container-max-width) * 2) / -2);
 }
 
 .timeline-article .content-right:after {
@@ -680,7 +686,7 @@ input:checked+.slider:before {
 .date-input-group input {
   padding: 8px 12px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 8px;
   font-size: 14px;
   font-family: inherit;
   width: inherit;
@@ -698,4 +704,26 @@ input:checked+.slider:before {
   color: #696969;
 }
 
-/* Date Inputs */
+#dropdownSideMenu {
+  padding: 10px;
+  position: absolute;
+  top: -279px;
+  right: 115%;
+  left: auto;
+  width: 520px;
+  max-height:600px;
+  border: 1px solid #696969c6;
+}
+
+.leftList,
+.rightList {
+  max-height: 250px; 
+  overflow-y: auto;
+}
+
+.areaLeft,
+.areaRight {
+  margin: 10px;
+  font-weight: bold;
+
+}
